# tartarus

./: .gitignore  README.md  pyproject.toml
.agents/skills/readme-drafter/: README.md
.agents/skills/readme-drafter/evals/: evals.json  trigger_tests.md
docs/: style_guide.md  uv-virtualenv-configuration.md
docs/scripts/: open_tabs.md
scripts/: bookmarks.py  open_tabs.py
tartarus/: __init__.py  display_utils.py  general_utils.py  storage_utils.py
